# origami-sim

./: .gitignore  CMakeLists.txt  F_crease.c  README.md  average_strain.txt  gradient-test.cpp  main.cpp  matlab_crease_hessian.txt  scrappy.py
data/CREASE_robot/: crease-fast-rightsideup-walk.json  crease-fast-upsidedown-walk.json  crease-grav-params.json  crease-nograv-params.json  crease-rightsideup-params.json  crease-rightsideup-walk.json  crease-standing-still-params.json  crease-standing-still.json  crease-upsidedown-params.json  crease-upsidedown-walk.json  crease_robot.fold  crease_robot_rightsideup_walk.json
data/activation_profiles/: caterpillar.json  crease_robot copy.json  crease_robot.json  crease_robot_ROT.json  crease_robot_gravitywalk.json  defaultsquare.json  frictiontest.json  gravitytest.json  hat.json  jump.json  possible-with-undriven-jumpy.json  possible-with-undriven.json  presentation.json  squarebase-gluetest.json  squarebase.json  uneven-gravitytest.json
data/crease_patterns/: CREASE_robot.fold  MIT_snowflake.fold  augmented-crease-pattern.fold  boxbase.fold  boxbase_ROT.fold  boxbase_ROT_halfdefined.fold  hat.fold  (+26 more)
include/: IPC-helperfunctions.h  T_vert.h  V_axial.h  assemble_barrier_forces.h  assemble_barrier_stiffness.h  assemble_crease_forces.h  assemble_crease_stiffness.h  assemble_damping_forces.h  assemble_damping_stiffness.h  assemble_edge_forces.h  assemble_edge_stiffness.h  assemble_face_forces.h  assemble_face_stiffness.h  assemble_forces.h  assemble_friction_forces.h  assemble_friction_stiffness.h  assemble_gravity_forces.h  assemble_gravity_stiffness.h  assemble_ground_barrier_forces.h  assemble_ground_barrier_stiffness.h  assemble_ground_friction_forces.h  assemble_ground_friction_stiffness.h  assemble_stiffness.h  axial_constraints.h  axial_hessian.h  crease_constraints.h  crease_hessian.h  dV_axial_dq.h  drawHelperFunctions.h  dynamic_target_angle.h  d²V_axial_dq².h  face_constraints.h  face_hessian.h  finite_difference_tester.h  forward_Euler.h  fully_implicit_euler.h  linearly_implicit_euler.h  make_mass_matrix.h  parameters.h  setup.h  (+2 more)
src/: IPC-helperfunctions.cpp  T_vert.cpp  V_axial.cpp  assemble_crease_forces.cpp  assemble_crease_stiffness.cpp  assemble_damping_forces.cpp  assemble_damping_stiffness.cpp  assemble_edge_forces.cpp  assemble_edge_stiffness.cpp  assemble_face_forces.cpp  assemble_face_stiffness.cpp  assemble_forces.cpp  assemble_friction_forces.cpp  assemble_friction_stiffness.cpp  assemble_gravity_forces.cpp  assemble_gravity_stiffness.cpp  assemble_ground_barrier_forces.cpp  assemble_ground_barrier_stiffness.cpp  assemble_ground_friction_forces.cpp  assemble_ground_friction_stiffness.cpp  assemble_stiffness.cpp  axial_constraints.cpp  axial_hessian.cpp  crease_constraints.cpp  crease_hessian.cpp  d2V_axial_dq2.cpp  dV_axial_dq.cpp  drawHelperFunctions.cpp  dynamic_target_angle.cpp  d²V_axial_dq².cpp  face_constraints.cpp  face_hessian.cpp  finite_difference_tester.cpp  make_mass_matrix.cpp  setup.cpp  strain_calculations.cpp  trig_helper_functions.cpp
(+47 files in other folders)
